Keep AI models on the server, per account, and stop wiping the choice
The report was that a model defined in one browser is missing from another
signed in as the same person. The log settled it: only /api/v3/ai/model/config
/test is ever called, never /save. The community build sets localPersistence,
so model configurations - API keys included - were written to localStorage.
They belonged to a browser profile, which is why an incognito window had none
and why clearing site data lost them.

Community now uses the server for them, and the model list in the picker comes
from there too, since nothing is kept locally to build it from. Models defined
before this are moved up on the next load and the local copy removed, so nobody
has to retype an API key; it is skipped when the account already has models of
its own, so it cannot overwrite a set moved from somewhere else.

That alone would have made one shared set for everybody. Everything scoped to a
person is keyed by a numeric user id, and Community handed every request the
same one - so one account's models, keys and all, would have been every
account's. The id is now derived from the signed-in account name: same name,
same id, across restarts and containers, because it is computed rather than
allocated.

Two more from the same log:

- GET /api/community/preferences threw a NullPointerException. Map.copyOf
  rejects null values, and "no model chosen" is a null - so settings saved
  happily and then failed to load, for exactly the accounts that had not
  picked a model.

- The picker clears its selection whenever the model list is empty, which it is
  for the moment before the list arrives. That cleared value was then saved
  over the account's real choice, so signing in destroyed the thing it had just
  loaded. Having nothing to choose from is not the same as choosing nothing,
  and only the second is recorded now.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_014h